--- a/main.html
+++ b/main.html
@@ -16,21 +16,21 @@
     <div id="navbar">
         <img src="img/PngItem_3933262 (1).png" alt="">
         <div class="ele">
-            <a href=".intro">Home</a>
+            <a href="#intro">Home</a>
             <a href="#about">About</a>
-            <a href=".skills">Projects</a>
+            <a href="#skills">Skills</a>
+            <a href="#proj">Projects</a>
             <a href="#bottom">Contacts</a>
         </div>
         <div class="ele_p">
-            <a href=".intro"><img src="img/home.png" alt="home"></a>
+            <a href="#intro"><img src="img/home.png" alt="home"></a>
             <a href="#about"><img src="img/—Pngtree—personal information icon_4436300.png" alt="about"></a>
-            <a href=".skills"><img src="img/kindpng_7415432.png" alt=""></a>
+            <a href="#skills"><img src="img/kindpng_7415432.png" alt=""></a>
             <a href="#bottom"><img src="img/Google_Contacts_logo.png" alt=""></a>
         </div>
     </div>
-    <div class="icons"></div>
     <div id="main">
-        <div class="intro">
+        <div class="intro" id="intro">
             <div class="con">
                 <h1 class="name">Hi<span class="nm">!</span> I am <br>
                     <span class="nm">PRAshu</span>
@@ -40,7 +40,7 @@
             <img class="plane" src="img/paper_plane_PNG10.png" alt="">
             <img class="meriphoto" src="img/photo_2022-08-06_19-50-281.png" alt="photo">
         </div>
-        <div id="about">
+        <div id="about"> 
             <div class="p1">
                 <img class="dev" src="img/pngwing.com.png" alt="">
                 <p class="p1">
@@ -51,8 +51,8 @@
                     Technology, Gorakhpur.<br>
                     I'm learning <span class="col">C/C++</span> as I've interest in Software Development,
                     I'm also a novice <span class="col">Photographer</span> and likes editing photos and videos in my free time.<br>
-                    Just scroll down, every element of this website
-                    shows a message.<br>
+                    <!-- Just scroll down, every element of this website
+                    shows a message.<br> -->
                 </p>
             </div>
             <div class="p1">
@@ -63,38 +63,80 @@
                     DLW, Varanasi</span> with Average percentage of 89.6% and 93.4% correspondingly.<br>
                     Developed my Developing interest after class 9th and had learned <span class="col">HTML and
                     CSS</span> as my first scripting laguage.<br>
-                    There after in class 11th I've learned Python(intermediate) then I now being using <span class="col">C/C++</span>.
-
-
-
+                    Till intermediate I've learned Python then I now learning <span class="col">C/C++</span>.
                 </p>
             </div>
         </div>
         <!-- <div class="icons"><img src="img/pngwing(1).png" alt=""><img src="img/pngwing(2).png" alt=""><img src="img/pngwing(3).png" alt=""><img src="img/pngwing.png" alt=""></div> -->
+        <h2 class="s" id="skills">Skills/ Achievements</h2>
         <div class="skills">
-            <h2>Skills/ Achievement</h2>
-            <div class="sk">
-                <img src="img/pngwing.png" alt="">
-                <div class="text">Intermediate level and got 5 star at HackerRank and 3 star in problem solving.</div>
-                <a class="ch" href="https://www.hackerrank.com/prashuverma012"><img src="img/HackerRank_logo.png" alt=""></a>
-                <a class="ch" href="https://leetcode.com/prashuverma012/"><img src="img/leetcode.png" alt=""></a>
-            </div>
-            <div class="sk" class="sk2">
-                <img src="img/pngwing(1).png" alt="">
-
-                <img src="img/pngwing(2).png" alt="">
-
-                <img src="img/pngwing(3).png" alt="">
-                <div class="text">
-                    Intermediate in HTML, CSS and Basics in JavaScript<br>
-                    Attached link..
+            <div class="sk"> <!--skill card-->
+                <div class="ph">
+                    <img src="img/favpng_career-counseling-education-school-profession-grodno.png" alt="" class="iconP">
                 </div>
-                <a href="https://github.com/Prashu-01"><img class="gi" class="ch" src="img/icone-github-grise.png" alt=""></a>
+                <span class="sk-name">Programming</span>
+                <div class="cont">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fuga nobis deleniti temporibus laudantium? Voluptas pariatur animi consectetur excepturi similique.
+                </div>
+                <span class="sk-name">Profiles</span><br>
+                <a class="ch" href="https://www.codechef.com/users/prashu_012"><img src="img/pngaaa.com-4464788.png" alt="" class="profile"></a>
+                <a class="ch" href="https://leetcode.com/prashuverma012/"><img src="img/leetcode.png" alt="" class="profile"></a>
+            </div>
+            
+            <div class="sk">
+                <div class="ph">
+                    <img src="img/frontend.png" alt="img1" class="iconP">
+                </div>
+                <span class="sk-name">Front-end Developer</span>
+                <div class="cont">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fuga nobis deleniti temporibus laudantium? Voluptas pariatur animi consectetur excepturi similique.
+                </div>
+                <span class="sk-name">Work Sample</span><br>
+                <a class="ch" href="https://www.hackerrank.com/prashuverma012"><img src="img/HackerRank_logo.png" alt="" class="profile"></a>
+                <a class="ch" href="https://leetcode.com/prashuverma012/"><img src="img/leetcode.png" alt="" class="profile"></a>
+            </div>
+            <div class="sk">
+                <div class="ph">
+                    <img src="img/favpng_photographer-photography.png" alt="" class="iconP">
+                </div>
+                <span class="sk-name">Photography</span>
+                <div class="cont">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fuga nobis deleniti temporibus laudantium? Voluptas pariatur animi consectetur excepturi similique.
+                </div>
+                <span class="sk-name">Profile</span><br>
+                <a class="ch" href="https://www.hackerrank.com/prashuverma012"><img src="img/HackerRank_logo.png" alt="" class="profile"></a>
             </div>
         </div>
-        <h2 style="color: black" ;><b>Projects</b></h2><br>
+        <h2 style="color: rgb(18, 18, 18);"><b>Projects</b></h2><br>
         <div id="proj">
-            <div class="proj">
+            <div class="sk sk-Project">
+                <div class="ph phproj">
+                </div><br>
+                <span class="sk-name">LogIn UI</span>
+                <div class="cont">
+                    A simple Login user interface idea by Using HTML and CSS.
+                </div>
+                <span class="sk-name">Work Sample</span><br>
+            </div>
+            <div class="sk sk-Project">
+                <div class="ph phproj">
+                </div><br>
+                <span class="sk-name">Calculator</span>
+                <div class="cont">
+                    Simple Calculator that performs basic operations.
+                </div>
+                <span class="sk-name">Work Sample</span><br>
+            </div>
+            <div class="sk sk-Project">
+                <div class="ph phproj">
+                </div><br>
+                <span class="sk-name">MarineLife</span>
+                <div class="cont">
+                    A simple Webpage for MarineLife importance and awareness. 
+                </div>
+                <span class="sk-name">Work Sample</span><br>
+            </div>
+            <!-- <div class="proj">
                 <a href="https://prashu-01.github.io/input_ui.github.io/main.html"><img class="bg1" src="img/input.jpg"
                         alt="input"></a>
                 <h3>Input_UI</h3>
@@ -109,27 +151,28 @@
             <div class="proj">
                 <a href="https://github.com/Prashu-01"><img class="bg1"
                         src="img/—Pngtree—cartoon illustration wall clock free_4486586.png" alt="clock"></a>
-                <h3>clock</h3>
+                <h3>Clock</h3>
                 <span class="pr1">Simple Clock that shows Real_Time. </span>
-            </div>
+            </div> -->
 
         </div>
         <div class="inte">
-
+            
         </div>
     </div>
     <h2 class="mg">Contact Me</h2>
-    <div id="bottom">
+    <footer id="bottom">
         <div class="bottom">
-
-            <div class="social"><a href="https://www.facebook.com/"><img class="fb"
+            <div class="contacts">
+                <!-- Contact Infos -->
+            </div>
+            <!-- <div class="social"><a href="https://www.facebook.com/"><img class="fb"
                         src="img/facebook-splat-f-logo-transparent-28.png" alt=""></a></div>
             <div class="social"><a href="https://www.instagram.com/prashu_v1202/"><img class="ist"
                         src="img/Instagram-logo-modern-paint-splash-social-media-png.png" alt=""></a></div>
-            <div class="social"><a href=""><img class="github" src="img/icone-github-grise.png" alt=""></a></div>
+            <div class="social"><a href=""><img class="github" src="img/icone-github-grise.png" alt=""></a></div> -->
         </div>
-        <div class="email">prashuverma012@gmail.com</div>
-    </div>
+    </footer>
 
 
 
@@ -141,7 +184,7 @@
             loop: true
         })
     </script>
-    &#169; prashu
+    <span class="copyright">&#169; prashu</span>
 </body>
 
 </html>
