--- a/main.html
+++ b/main.html
@@ -70,47 +70,55 @@
         <!-- <div class="icons"><img src="img/pngwing(1).png" alt=""><img src="img/pngwing(2).png" alt=""><img src="img/pngwing(3).png" alt=""><img src="img/pngwing.png" alt=""></div> -->
         <h2 class="s" id="skills">Skills/ Achievements</h2>
         <div class="skills">
-            <div class="sk"> <!--skill card-->
+            <div class="sk custom"> <!--skill card-->
                 <div class="ph">
                     <img src="img/favpng_career-counseling-education-school-profession-grodno.png" alt="" class="iconP">
                 </div>
                 <span class="sk-name">Programming</span>
                 <div class="cont">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fuga nobis deleniti temporibus laudantium? Voluptas pariatur animi consectetur excepturi similique.
+                    An intermediate level programmer and currently learning the concepts of Data Structure and Algorithm.
                 </div>
                 <span class="sk-name">Profiles</span><br>
-                <a class="ch" href="https://www.codechef.com/users/prashu_012"><img src="img/pngaaa.com-4464788.png" alt="" class="profile"></a>
+                <a class="ch" href="https://www.codechef.com/users/prashu_012"><img src="img/CodeChef (@codechef).jpg" alt="" class="profile"></a>
                 <a class="ch" href="https://leetcode.com/prashuverma012/"><img src="img/leetcode.png" alt="" class="profile"></a>
+                <a class="ch" href="https://www.hackerrank.com/prashuverma012"><img src="img/HackerRank_logo.png" alt="" class="profile"></a>
             </div>
             
-            <div class="sk">
+            <div class="sk custom">
                 <div class="ph">
                     <img src="img/frontend.png" alt="img1" class="iconP">
                 </div>
                 <span class="sk-name">Front-end Developer</span>
                 <div class="cont">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fuga nobis deleniti temporibus laudantium? Voluptas pariatur animi consectetur excepturi similique.
+                    I'm a Front-end Developer and have learned the scripting language like HTML,CSS and JS. I'm currently seeking to learn Back-end.  
                 </div>
                 <span class="sk-name">Work Sample</span><br>
                 <a class="ch" href="https://www.hackerrank.com/prashuverma012"><img src="img/HackerRank_logo.png" alt="" class="profile"></a>
                 <a class="ch" href="https://leetcode.com/prashuverma012/"><img src="img/leetcode.png" alt="" class="profile"></a>
             </div>
-            <div class="sk">
+            <div class="sk custom">
                 <div class="ph">
                     <img src="img/favpng_photographer-photography.png" alt="" class="iconP">
                 </div>
-                <span class="sk-name">Photography</span>
+                <span class="sk-name">Hobbies</span>
                 <div class="cont">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fuga nobis deleniti temporibus laudantium? Voluptas pariatur animi consectetur excepturi similique.
+                    <span class="sk-name">Photography</span><br>
+                    An average level photographer, loves to frame the arts of beautiful nature.
+                    
+                    <span class="sk-name">Video Editing</span><br>
+                    A beginner video editor, enjoy to make the transitions with beats.
+                    <!-- <span class="sk-name"></span> -->
                 </div>
-                <span class="sk-name">Profile</span><br>
-                <a class="ch" href="https://www.hackerrank.com/prashuverma012"><img src="img/HackerRank_logo.png" alt="" class="profile"></a>
+                <span class="sk-name">Work Sample</span><br>
+                <a class="ch" href="https://www.hackerrank.com/prashuverma012"><img src="img/Instagram-logo-modern-paint-splash-social-media-png.png" alt="" class="profile"></a>
             </div>
         </div>
+
+        <!-- Porjects -->
         <h2 style="color: rgb(18, 18, 18);"><b>Projects</b></h2><br>
         <div id="proj">
-            <div class="sk sk-Project">
-                <div class="ph phproj">
+            <div class="sk-Project sk">
+                <div class="ph phproj"><img src="img/input.jpg" alt="" class="proj-ss">
                 </div><br>
                 <span class="sk-name">LogIn UI</span>
                 <div class="cont">
