--- a/main.html
+++ b/main.html
@@ -43,32 +43,29 @@
         <div id="about"> 
             <div class="p1">
                 <img class="dev" src="img/pngwing.com.png" alt="">
-                <p class="p1">
-                    <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ducimus facilis, quas ab quibusdam inventore temporibus, dicta ut minima perspiciatis neque. Rerum voluptas qui sapiente amet, aspernatur reprehenderit cumque, quisquam molestiae porro ipsam illum soluta hic vitae vel excepturi ab, ipsum quaerat. Soluta unde voluptate neque atque quos facilis odio. -->
+                <p class="p-1">
                     <span class="col1">Introduction</span><br>
                     I'm a Coder,front-end developer, a Photographer and currently
                     pursuising my BTech degree from Madan Mohan Malviya University of
                     Technology, Gorakhpur.<br>
                     I'm learning <span class="col">C/C++</span> as I've interest in Software Development,
                     I'm also a novice <span class="col">Photographer</span> and likes editing photos and videos in my free time.<br>
-                    <!-- Just scroll down, every element of this website
-                    shows a message.<br> -->
                 </p>
             </div>
             <div class="p1">
-                <img class="dev" src="img/PngItem_3933262 (1).png" alt="">
-                <p class="p1">
+                <p class="p-1">
                     <span class="col1">Qualifications</span><br>
                     Have completed high school and Intermediate from <span class="col">Kendriya Vidyalaya Kanchanpur
                     DLW, Varanasi</span> with Average percentage of 89.6% and 93.4% correspondingly.<br>
                     Developed my Developing interest after class 9th and had learned <span class="col">HTML and
                     CSS</span> as my first scripting laguage.<br>
-                    Till intermediate I've learned Python then I now learning <span class="col">C/C++</span>.
+                    Till intermediate I've learned Python then I'm now learning <span class="col">C/C++</span>.
                 </p>
+                <img class="dev" src="img/PngItem_3933262 (1).png" alt="">
             </div>
         </div>
         <!-- <div class="icons"><img src="img/pngwing(1).png" alt=""><img src="img/pngwing(2).png" alt=""><img src="img/pngwing(3).png" alt=""><img src="img/pngwing.png" alt=""></div> -->
-        <h2 class="s" id="skills">Skills/ Achievements</h2>
+        <h2 class="s" id="skills">Skills</h2>
         <div class="skills">
             <div class="sk custom"> <!--skill card-->
                 <div class="ph">
@@ -92,9 +89,8 @@
                 <div class="cont">
                     I'm a Front-end Developer and have learned the scripting language like HTML,CSS and JS. I'm currently seeking to learn Back-end.  
                 </div>
-                <span class="sk-name">Work Sample</span><br>
-                <a class="ch" href="https://www.hackerrank.com/prashuverma012"><img src="img/HackerRank_logo.png" alt="" class="profile"></a>
-                <a class="ch" href="https://leetcode.com/prashuverma012/"><img src="img/leetcode.png" alt="" class="profile"></a>
+                <span class="sk-name">Github</span><br>
+                <a class="ch" href="https://www.hackerrank.com/prashuverma012"><img src="img/github-dark.png" alt="" class="profile"></a>
             </div>
             <div class="sk custom">
                 <div class="ph">
@@ -102,12 +98,8 @@
                 </div>
                 <span class="sk-name">Hobbies</span>
                 <div class="cont">
-                    <span class="sk-name">Photography</span><br>
                     An average level photographer, loves to frame the arts of beautiful nature.
-                    
-                    <span class="sk-name">Video Editing</span><br>
                     A beginner video editor, enjoy to make the transitions with beats.
-                    <!-- <span class="sk-name"></span> -->
                 </div>
                 <span class="sk-name">Work Sample</span><br>
                 <a class="ch" href="https://www.hackerrank.com/prashuverma012"><img src="img/Instagram-logo-modern-paint-splash-social-media-png.png" alt="" class="profile"></a>
