--- a/main.html
+++ b/main.html
@@ -90,13 +90,13 @@
                     I'm a Front-end Developer and have learned the scripting language like HTML,CSS and JS. I'm currently seeking to learn Back-end.  
                 </div>
                 <span class="sk-name">Github</span><br>
-                <a class="ch" href="https://www.hackerrank.com/prashuverma012"><img src="img/github-dark.png" alt="" class="profile"></a>
+                <a class="ch" href="https://github.com/Prashu-01?tab=repositories"><img src="img/github-dark.png" alt="" class="profile"></a>
             </div>
             <div class="sk custom">
                 <div class="ph">
                     <img src="img/favpng_photographer-photography.png" alt="" class="iconP">
                 </div>
-                <span class="sk-name">Hobbies</span>
+                <span class="sk-name">Designing</span>
                 <div class="cont">
                     An average level photographer, loves to frame the arts of beautiful nature.
                     A beginner video editor, enjoy to make the transitions with beats.
